# Waxedit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: defines.h  file_dialog.h
include/Model/: Document.h  EditorModel.h  EditorModelObserver.h
include/Presenter/: EditorPresenter.h
include/View/: EditorView.h  IEditorView.h
include/View/Widgets/: CodeEditorWidget.h  LineNumberingWidget.h
res/Shaders/: TextRenderer.vs
src/: App.cpp  App.h  Canvas.cpp  Canvas.h  FileManager.h  HotkeyHandler.cpp  HotkeyHandler.h  IRenderer.h  IRenderingContext.h  MainRenderingContext.cpp  MainRenderingContext.h  MainWindow.cpp  MainWindow.h  Renderer.cpp  Renderer.h  RenderingWindow.cpp  RenderingWindow.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h  defines.h  main.cpp
src/Editor/: Document.cpp  Document.h  Editor.cpp  Editor.h  EditorModel.cpp  EditorModel.h  EditorPresenter.cpp  EditorPresenter.h  EditorView.cpp  EditorView.h  IEditorView.h
src/Editor/Commands/: CloseCurrentDocumentCommand.cpp  CloseCurrentDocumentCommand.h  Command.h  Invoker.cpp  Invoker.h  NotStackableCommand.h  OpenFileCommand.cpp  OpenFileCommand.h  SaveDocumentsCommand.cpp  SaveDocumentsCommand.h
src/Model/: Document.cpp  EditorModel.cpp
src/Platform/: linux_file_dialog.cpp  windows_file_dialog.cpp
src/Presenter/: EditorPresenter.cpp
src/Rendering/: FontRaster.cpp  FontRaster.h  RasteredFontStorage.cpp  RasteredFontStorageManager.cpp  RasteredFontStorageManager.h  TextBatch.h  TextRenderer.cpp  TextRenderer.h
src/Shaders/: RectangleShader.cpp
src/View/: CodeEditorWidget.cpp  CodeEditorWidget.h  EditorView.cpp
src/View/Widgets/: CodeEditorWidget.cpp  LineNumberingWidget.cpp
src/Widgets/: Rectangle.cpp  Rectangle.h  Text.cpp  Text.h  Widget.cpp  Widget.h
